# ninox

./: CODEOWNERS  Cargo.toml  LICENSE  README.md  justfile
.claude/skills/brain/: SKILL.md
.github/actions/build-macos-bundle/: action.yml
.github/workflows/: ci.yml  guard-internal-paths.yml  publish-codeartifact.yml  publish.yml  release.yml  sync-from-public.yml
.superpowers/: cost-fix-report.md
crates/athene-app/: Cargo.toml
crates/athene-app/src/: app.rs  main.rs  theme.rs
crates/athene-app/src/components/: fleet_board.rs  info_panel.rs  inspector_panel.rs  mod.rs  session_detail.rs  sidebar.rs  spawn_modal.rs  terminal.rs
crates/athene-core/: Cargo.toml
crates/athene-core/src/: config.rs  events.rs  lib.rs  pty.rs  store.rs  tmux.rs
crates/athene-server/: Cargo.toml
crates/athene-server/src/routes/: events.rs
crates/ninox-app/: Cargo.toml
crates/ninox-app/assets/: Ninox.icns
crates/ninox-app/src/: app.rs  input.rs  main.rs  models.rs  spawn_util.rs  style.rs  theme.rs
crates/ninox-app/src/components/: brain_panel.rs  brain_pinboard.rs  catalogue_modal.rs  filter_bar.rs  fleet_board.rs  folio.rs  info_panel.rs  inspector_panel.rs  lifecycle_status.rs  links.rs  mod.rs  notification_panel.rs  pr_list.rs  scrollback.rs  session_detail.rs  settings_panel.rs  sidebar.rs  spawn_modal.rs  terminal.rs
crates/ninox-core/: Cargo.toml
crates/ninox-core/src/: brain.rs  brain_archive.rs  client.rs  config.rs  embeddings.rs  events.rs  github.rs  harness.rs  hooks.rs  inbox.rs  lib.rs  messaging.rs  pty.rs  store.rs  tmux.rs  types.rs
crates/ninox-core/src/brain_sync/: config.rs  diff.rs  manifest.rs  mod.rs  s3.rs  store.rs
crates/ninox-core/src/lifecycle/: brain_harvest.rs  enrichment.rs  mod.rs  poller.rs  reactions.rs  repo_discovery.rs  statusline.rs  update_check.rs  usage.rs
crates/ninox-server/: Cargo.toml
crates/ninox-server/src/: server.rs
crates/ninox-server/src/routes/: brain.rs  events.rs  orchestrators.rs  sessions.rs  terminal.rs
docs/: BRAIN.md  design-brief.md
docs/design-concepts/: 01-night-watch.html  02-mission-control.html  03-field-notes.html  04-nebula.html  field-notes-design.md  index.html
docs/specs/: athene-user-migration.md  brain.md
docs/superpowers/plans/: 2026-07-03-field-notes-design.md  2026-07-03-native-terminal-rendering.md  2026-07-05-settings-appendix.md  2026-07-06-brain-semantic-search.md  2026-07-06-session-resume.md  2026-07-07-brain-skill-discovery.md  2026-07-07-clickable-terminal-links.md  2026-07-07-statusline-context-cost.md  2026-07-09-lifecycle-gate-tracking.md  2026-07-20-brain-pinboard-declutter.md  2026-07-22-remote-brain.md
docs/superpowers/specs/: 2026-07-03-native-terminal-rendering-design.md  2026-07-06-brain-semantic-search-design.md  2026-07-06-session-resume-design.md  2026-07-06-statusline-context-cost-design.md  2026-07-07-brain-live-updates-design.md  2026-07-07-brain-skill-discovery-design.md  2026-07-09-lifecycle-gate-tracking-design.md  2026-07-17-brain-pinboard-declutter-design.md  2026-07-22-remote-brain-design.md
scripts/: promote-to-public.sh
