[workspace]
members = [
    "crates/ninox-core",
    "crates/ninox-server",
    "crates/ninox-app",
]
resolver = "2"

[workspace.dependencies]
tokio       = { version = "1",    features = ["full"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
axum        = { version = "0.7",  features = ["ws"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
anyhow      = "1"
toml        = "0.8"
dirs        = "5"
fastembed   = "5"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util  = { version = "0.7",  features = ["codec"] }
libc        = "0.2"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
walkdir     = "2"
rayon       = "1"
async-trait = "0.1"
tar         = "0.4"
flate2      = "1"
semver      = "1"
