[package]
name    = "athene-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "athene-app"
path = "src/main.rs"

[dependencies]
athene-core   = { path = "../athene-core" }
athene-server = { path = "../athene-server" }
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
dirs          = { workspace = true }
