[package]
name        = "ninox"
version     = "0.2.0"
edition     = "2021"
description = "Ninox native desktop app: GPU-accelerated Rust/Iced UI for the Ninox orchestrator engine."
license     = "MIT"
repository  = "https://github.com/Made-by-Moonlight/ninox"

[dependencies]
ninox-core   = { path = "../ninox-core", version = "0.2.0" }
ninox-server = { path = "../ninox-server", version = "0.2.0" }
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
dirs          = { workspace = true }
serde_json    = { workspace = true }
toml          = { workspace = true }
iced = { version = "0.13", features = ["tokio", "canvas", "advanced", "wgpu", "markdown", "lazy"] }
chrono = "0.4"
notify-rust = "4"
alacritty_terminal = "0.26"
async-stream = "0.3.6"
arboard = "3"
ttf-parser = "0.25"

[dev-dependencies]
tempfile = "3.27.0"
