[package]
name        = "ninox"
version     = "0.5.0"
edition     = "2021"
description = "Ninox native desktop app: GPU-accelerated Rust/Iced UI for the Ninox orchestrator engine."
license     = "MIT"
repository  = "https://github.com/Made-by-Moonlight/ninox"

[dependencies]
ninox-core   = { path = "../ninox-core", version = "0.5.0" }
ninox-server = { path = "../ninox-server", version = "0.5.0" }
tokio         = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util    = { workspace = true }
clap          = { version = "4", features = ["derive"] }
dirs          = { workspace = true }
serde_json    = { workspace = true }
toml          = { workspace = true }
iced = { version = "0.13", features = ["tokio", "canvas", "advanced", "wgpu", "markdown", "lazy"] }
chrono = "0.4"
notify-rust = "4"
alacritty_terminal = "0.26"
async-stream = "0.3.6"
arboard = "3"
ttf-parser = "0.25"

[dev-dependencies]
tempfile = "3.27.0"
# Used only to drive `iced::Task<Message>` (returned from `App::update`) to
# completion synchronously in tests — e.g. the ResumeSession/RefileSession
# failure-path regression tests, which need to observe the store mutation
# the Task's async block performs. Both are already transitive deps of
# `iced` at the exact versions pinned here (see Cargo.lock), so this adds
# no new dependency, just a direct edge to what's already resolved.
iced_runtime = "0.13"
futures = "0.3"
