[package]
name        = "ninox-core"
version     = "0.16.0"
edition     = "2021"
description = "Engine core for the Ninox native app: session lifecycle, config, and storage."
license     = "MIT"
repository  = "https://github.com/Made-by-Moonlight/ninox"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
rusqlite   = { workspace = true, features = ["functions"] }
anyhow     = { workspace = true }
toml       = { workspace = true }
dirs       = { workspace = true }
fastembed  = { workspace = true }
tracing    = { workspace = true }
tokio-util = { workspace = true }
libc       = { workspace = true }
reqwest    = { workspace = true }
walkdir    = { workspace = true }
rayon      = { workspace = true }
portable-pty = "0.8"
uuid       = { version = "1", features = ["v4"] }
async-trait = { workspace = true }
tar        = { workspace = true }
flate2     = { workspace = true }
semver     = { workspace = true }

[dev-dependencies]
tempfile           = "3"
tokio-test         = "0.4"
tracing-subscriber = { workspace = true }
