[package]
name        = "ninox-server"
version     = "0.2.0"
edition     = "2021"
description = "HTTP/WebSocket server exposing the Ninox engine to the native app and web dashboard."
license     = "MIT"
repository  = "https://github.com/Made-by-Moonlight/ninox"

[dependencies]
ninox-core   = { path = "../ninox-core", version = "0.2.0" }
tokio        = { workspace = true }
axum         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tower-http   = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = "0.3"

[dev-dependencies]
tower    = { version = "0.4", features = ["util"] }
http     = "1"
tempfile = "3"
